# archlinux-package-synchronizer

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code_quality.yml  functional_testing.yml
pkgbuild/archlinux-package-synchronizer-git/: PKGBUILD
src/archlinux_package_synchronizer/: __init__.py  config.py  console.py  main.py  os_path.py  path.py
src/archlinux_package_synchronizer/commands/: __init__.py  app.py  initialize.py  synchronize.py
src/archlinux_package_synchronizer/package_manager/: __init__.py  _yay.py  abstract_package_manager.py  interfaces.py
src/archlinux_package_synchronizer/process_runner/: __init__.py  _executable.py  exceptions.py  executable_finder.py  interfaces.py  models.py  runners.py
tests/: conftest.py  test_hello.py  test_main.py  test_os_path.py  test_path.py  test_subprocess_run.py
tests/commands/: test_initialize.py
tests/package_manager/: test_yay.py
tests/process_runner/: test_executable_finder.py
